Update and rename 2018-03-12-contact.md to 2018-03-12-contacts.md

--- a/_posts/2018-03-12-contacts.md
+++ b/_posts/2018-03-12-contacts.md
@@ -15,7 +15,7 @@ image: contact-bg.jpg
 
 Вконтакте: [https://vk.com/id352930426](https://vk.com/id352930426)
 
-Почта: tds-77@mail.ru
+Почта: <tds-77@mail.ru>
 
 # Оксана Алюкина
 Член ТРСПОО "Сыны Отечества"
