--- a/404.md
+++ b/404.md
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: 404
-Что-то пошло не так
+description: Что-то пошло не так
 permalink: /404
 ---
 Страница не найдена! :(
